@@ -23,11 +23,13 @@ static R_CallMethodDef CallEntries[] = {
     {"mer_coefGets", (DL_FUNC) &mer_coefGets, 3},
     {"mer_create", (DL_FUNC) &mer_create, 7},
     {"mer2_create", (DL_FUNC) &mer2_create, 9},
+    {"mer2_deviance", (DL_FUNC) &mer2_deviance, 2},
     {"mer_dtCMatrix", (DL_FUNC) &mer_dtCMatrix, 1},
     {"mer_dtCMatrix_inv", (DL_FUNC) &mer_dtCMatrix_inv, 1},
     {"mer_factor", (DL_FUNC) &mer_factor, 1},
     {"mer_fitted", (DL_FUNC) &mer_fitted, 1},
     {"mer_fixef", (DL_FUNC) &mer_fixef, 1},
+    {"mer2_getPars", (DL_FUNC) &mer2_getPars, 1},
     {"mer_gradComp", (DL_FUNC) &mer_gradComp, 1},
     {"mer_gradient", (DL_FUNC) &mer_gradient, 2},
     {"mer_hat_trace", (DL_FUNC) &mer_hat_trace, 1},
@@ -37,6 +39,7 @@ static R_CallMethodDef CallEntries[] = {
     {"mer_postVar", (DL_FUNC) &mer_postVar, 1},
     {"mer_ranef", (DL_FUNC) &mer_ranef, 1},
     {"mer_secondary", (DL_FUNC) &mer_secondary, 1},
+    {"mer2_setPars", (DL_FUNC) &mer2_setPars, 2},
     {"mer_sigma", (DL_FUNC) &mer_sigma, 2},
     {"mer_simulate", (DL_FUNC) &mer_simulate, 2},
     {"mer_update_ZXy", (DL_FUNC) &mer_update_ZXy, 1},
